agent detail page

--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -35,5 +35,5 @@
 
   </div>
   <div class="bottom-wrapper">
-    <router-outlet></router-outlet>
+    <router-outlet (pageNameEvent)="receivePageName($event)"></router-outlet>
   </div>
