--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -1,26 +1,32 @@
 .blue-snackbar {
-  background: black;
-  color: white;
+    background: black;
+    color: white;
 }
 
 .red-snackbar {
-  background: red;
-  color: white;
+    background: red;
+    color: white;
 }
 
 #toast-container>div {
-  opacity: 1;
+    opacity: 1;
 }
 
 .bottom-wrapper {
-  width: 100%;
-  padding-top: 60px;
-  z-index: 5;
-  overflow: auto;
+    width: 100%;
+    padding-top: 60px;
+    z-index: 5;
+    overflow: auto;
 }
 
 .wrapper {
-  width: 100%;
-  position: fixed;
-  z-index: 10;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
