--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -15,7 +15,7 @@
 
     <div class="col-xs-12 col-md-12">
       <ul class="agent-details">
-        <li class="agent-contact"><a href="#">Contact </a></li>
+        <li class="agent-contact" (click)="contactDetailClick()"><a>Contact </a></li>
         <li class="objectives"><a href="#">Objective</a></li>
         <li class="notes"><a href="#">Notes</a></li>
         <li class="events"><a href="#">Events</a></li>
