agent objective ui integrated

--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -2,11 +2,11 @@
   <div class="container nav-bg">
     <div class="row">
 
-      <div class="col-xs-2 toppad"><img src="/src/images/back-btn.svg" alt=""></div>
+      <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()" ></div>
       <div class="col-xs-7 text-center">
         <h1 class="t-agent">Contact</h1>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="/src/images/edit.svg" alt=""><br><span class="edit-detail"><a
+      <div class="col-xs-3 text-center tpad"><img src="../../../../images/edit.svg" alt=""><br><span class="edit-detail"><a
             href="#">Edit Details</a></span></div>
     </div>
 
