--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -4,7 +4,7 @@
       <header>
         <div class="row">
           <div class="col-md-4 col-xs-12 text-center">
-            <h1 class="logo"><img src="/src/images/logo.png" class="img-reponsive" alt="" /><br><img src="/src/images/Compass.png"
+            <h1 class="logo"><img src="../../../../images/logo.png" class="img-reponsive" alt="" /><br><img src="../../../../images/Compass.png"
                 class="img-reponsive" alt="" /></h1>
           </div>
         </div>
