--- a/src/app/views/dashboard/agent-with-alert/agent-with-alert.component.html
+++ b/src/app/views/dashboard/agent-with-alert/agent-with-alert.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-alert">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -11,7 +11,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-alert">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-alert">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -29,7 +29,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-alert">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -38,7 +38,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-alert">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -47,7 +47,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-alert">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
