--- a/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
+++ b/src/app/views/dashboard/agent-with-performance/agent-with-performance.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-perform">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span class="year">Current Year %</span><br> <span class="price">$15,595 (93%)</span></div>
@@ -13,7 +13,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-perform">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span class="year">Current Year %</span><br> <span class="price">$15,595 (93%)</span></div>
@@ -25,7 +25,7 @@
 
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-perform">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span class="year">Current Year %</span><br> <span class="price">$15,595 (93%)</span></div>
@@ -37,7 +37,7 @@
 
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-perform">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span class="year">Current Year %</span><br> <span class="price">$15,595 (93%)</span></div>
@@ -49,7 +49,7 @@
 
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail ag-perform">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span class="year">Current Year %</span><br> <span class="price">$15,595 (93%)</span></div>
