--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -17,7 +17,7 @@
 
 <!-- <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>NETCO. Inc</h4> <span>Las Vegas, NV</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -25,7 +25,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -33,7 +33,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -41,7 +41,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
@@ -49,7 +49,7 @@
     </div>
     <div class="col-xs-12 col-md-6 cell-bg">
       <div class="agent-detail">
-        <div class="dp"><img src="/src/images/placeholder.png" alt="" /></div>
+        <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
         <h4>DisneyWorld</h4> <span>Orlando, FL</span>
         <div class="clearfix"></div>
         <div class="amount"><span>Net Premium</span><br>$15,595 (93%)</div>
