agent objective ui integrated

--- a/src/app/views/agent/agent-objective/agent-objective.component.html
+++ b/src/app/views/agent/agent-objective/agent-objective.component.html
@@ -1,14 +1,15 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg">
+  <div class="container nav-bg wrapper">
     <div class="row">
       <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-7 text-center">
         <h1 class="t-agent">Objective</h1>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="../../../../images/add.svg" alt=""><br><span class="edit-detail"><a>Add New</a></span></div>
+      <div class="col-xs-3 text-center tpad"><img src="../../../../images/add.svg" alt=""><br><span class="edit-detail"><a>Add
+            New</a></span></div>
     </div>
   </div>
-  <div class="container app-bg2">
+  <div class="container app-bg2 bottom-wrapper-for-back">
     <div class="row">
       <div class="col-xs-12 col-md-6 cell-bg">
 
