--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -24,7 +24,12 @@
   z-index: 5;
   overflow: auto;
 }
-
+.bottom-wrapper-margin-110{
+  width: 100%;
+  padding-top: 110px;
+  z-index: 5;
+  overflow: auto;
+}
 .wrapper {
   width: 100%;
   position: fixed;
