forgot password api integrated

--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -12,13 +12,13 @@
     </div>
     <div class="container app-bg">
       <div class="row">
-        <form>
+        <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
           <div class="col-md-12 col-xs-12 text-center box2">
             <div class="divider"></div>
             <p>Please Provide your registered email ID to get your password</p>
             <label for="registered">Registered Email ID</label>
             <div class="input-group">
-              <input type="email" class="form-control" id="email" placeholder="Enter your Email ID">
+              <input type="email" class="form-control" id="email" placeholder="Enter your Email ID" formControlName="email">
             </div>
           </div>
 
