getTopAgent api integrated

--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -5,9 +5,9 @@
         <div class="dp">
           <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}} alt="" />
         </div>
-        <h4>{{agentInfo.agentName}}</h4> <span class="building-icon padding-left-twenty-five">287156</span>
+        <h4>{{agentInfo.name}}</h4> <span class="building-icon padding-left-twenty-five">{{agentInfo.agentId}}</span>
         <div class="clearfix"></div>
-        <div class="amount bx1"><span>Net Premium</span><br>{{agentInfo.agentNetPremium}}</div>
+        <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
         <div class="amount bx2"><span><img src="../../../../images/share.svg" alt="" /></span></div>
         <div class="amount bx3"><span><img src="../../../../images/doc.svg" alt="" /></span></div>
       </div>
