implementing search page ui

--- a/src/app/views/dashboard/top-agents/top-agents.component.html
+++ b/src/app/views/dashboard/top-agents/top-agents.component.html
@@ -18,5 +18,7 @@
       <span class="straight-line"></span>
 
     </div>
+    <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+        class="glyphicon glyphicon-arrow-up"></span></button>
   </div>
 </div>
