--- a/src/app/customUI/dialogs/alert-dialog/alert-dialog.component.html
+++ b/src/app/customUI/dialogs/alert-dialog/alert-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 matDialogTitle style="color:green;font-weight: bold">Congratulations</h2>
+<h2 matDialogTitle style="color:green;font-weight: bold"></h2>
 <mat-dialog-content>
   <p>{{message}}</p>
 </mat-dialog-content>
