--- a/src/app/views/agent/agent-detail/agent-detail.component.html
+++ b/src/app/views/agent/agent-detail/agent-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-md-12 cell-bg wrapper">
+    <div class="col-xs-12 col-md-12 cell-bg">
       <div class="agent-detail ">
         <div class="dp">
           <div class="badge bd-col">A</div><img src={{agentInfo.agentImg}} alt="" />
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-md-12 bottom-wrapper-margin-110">  
+    <div class="col-xs-12 col-md-12">  
       <ul class="agent-details">
         <li class="agent-contact" (click)="contactDetailClick()"><a>Contact </a></li>
         <li class="objectives" (click)="objectiveClick()"><a>Objective</a></li>
