--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -5,14 +5,17 @@
       <div class="col-xs-8 text-center">
         <h1 class="t-agent">{{headerTitle}}</h1>
       </div>
-      <div class="col-xs-2 text-right toppad"><img src="../../../../images/refresh.svg" alt="" (click)="logout()"></div>
+      <div class="col-xs-2 text-right toppad" *ngIf="showRefreshButton"><img src="../../../../images/refresh.svg" alt=""
+          (click)="logout()"></div>
+      <div class="col-xs-2 text-right toppad" *ngIf="showFilterButton"><img src="../../../../images/filter.svg" alt=""
+          (click)="onFilterClick()"><br><span class="edit-detail"><a href="#">Filter</a></span></div>
     </div>
 
     <div id="mySidenav" class="sidenav">
       <div class="container">
         <div class="row">
-          <div class="col-xs-5"> <a href="javascript:void(0)" class="closebtn" (click)="closeNav()"><img src="../../../../images/close.svg"
-                alt=""></a></div>
+          <div class="col-xs-5"> <a href="javascript:void(0)" class="closebtn" (click)="closeNav()"><img
+                src="../../../../images/close.svg" alt=""></a></div>
           <div class="col-xs-7 pro-n-setting"><a href="#"><img src="../../../../images/dp2.png" class="img-circle"
                 width="24" height="24" alt="" /> Profile & Settings</a></div>
         </div>
