--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -4,8 +4,8 @@
       <header>
         <div class="row">
           <div class="col-md-12 col-xs-12 text-center">
-            <h1 class="logo"><a href="/"><img src="../../../assets/images/logo.png" class="img-reponsive" alt="" /><br><img
-                  src="../../../assets/images/Compass.png" class="img-reponsive" alt="" /></a></h1>
+            <h1 class="logo"><a href="/"><img src="../../../images/logo.png" class="img-reponsive" alt="" /><br><img
+                  src="../../../images/Compass.png" class="img-reponsive" alt="" /></a></h1>
           </div>
         </div>
       </header>
