--- a/src/app/customUI/dialogs/alert-dialog/alert-dialog.component.html
+++ b/src/app/customUI/dialogs/alert-dialog/alert-dialog.component.html
@@ -1,13 +1,11 @@
-<h2 matDialogTitle style="color:green;font-weight: bold"></h2>
+
 <mat-dialog-content>
-  <p>{{message}}</p>
+  <div class="modal-header nobord">
+    <h5 class="modal-title" id="exampleModalLabel">{{data.alertTitle}}</h5>
+  </div>
+  <p style="padding: 10px">{{data.message}}</p>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <!--
-    Note that you can pass in anything to the `matDialogClose` attribute. This also includes objects, arrays, etc.
-    Just make sure that you make it a property binding with those [] brackets
-    Example: <button mat-button [matDialogClose]="{'lol': true}">Cancel</button>
-  -->
-  
-  <button mat-button matDialogClose="confirm" color="#Accent" (click)="onNoClick()">OK</button>
+<mat-dialog-actions id="DialogButtonGroup" align="end">
+ 
+  <button matDialogClose="confirm" class="dialogYes" (click)="onNoClick()">OK</button>
 </mat-dialog-actions>
