--- a/src/app/views/dashboard/search/search.component.html
+++ b/src/app/views/dashboard/search/search.component.html
@@ -15,7 +15,7 @@
 
   </div>
   <div class="bottom-bord"></div>
-  <div class="serach-result app-bg2">
+  <div class="serach-result">
 
     <div class="row" *ngIf="hideNoDataDiv">
       <ul>
@@ -23,7 +23,7 @@
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail ag-perform">
               <div class="dp"><img src="../../../../images/placeholder.png" alt="" /></div>
-              <h4>{{getName(item)}}</h4> <span>{{getAddress(item)}}</span>
+              <h4>{{item.name}}</h4> <span>{{getAddress(item)}}</span>
               <div class="clearfix"></div>
             </div>
           </div>
@@ -32,7 +32,12 @@
       </ul>
       <button (click)="topFunction()" id="myBtn" title="Go to top"><span
           class="glyphicon glyphicon-arrow-up"></span></button>
+      <div class="load-more-div" *ngIf="moreDataAvailable">
+        <span class="straight-line"></span>
+        <span class="load-more-text" (click)="onLoadMoreClick()">Load More</span>
+        <span class="straight-line"></span>
 
+      </div>
 
     </div>
     <div class="serach-emp" *ngIf="!hideNoDataDiv">
